--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,27 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div class="container">
+    <header class="header">
+    <nav>
+        <ul class="nav nav-pills pull-right">
+          <% if current_user %>
+            <li>Logged in as <%= current_user.email %></li>
+            <li><%= link_to "Log Out", logout_path %></li>
+          <% else %>
+            <li><%= link_to "Sign Up", signup_path %></li>
+            <li><%= link_to "Log In", login_path %></li>
+          <% end %>
+        </ul>
+      </nav>
+      <h2 class="text-muted"><%= link_to "Donatr", root_path %></h2>
+  </header>
 
-<%= yield %>
+  <%= flash[:notice] %>
+  <%= flash[:alert] %>
 
+  <%= yield %>
+
+  </div>
 </body>
 </html>
