--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,11 @@
       <h2 class="text-muted"><%= link_to "Donatr", root_path %></h2>
   </header>
 
-  <%= flash[:notice] %>
-  <%= flash[:alert] %>
+  <% if flash[:notice] %>
+    <div class="alert alert-success alert-dismissible center" role="alert">
+      <%= flash[:notice] %> <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span></button>
+    </div>
+  <% end %>
 
   <%= yield %>
 
