create new causes

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -1,8 +1,18 @@
-.signup, .login {
+.container {
+  max-width: 50em;
+}
+
+.new {
   width: 20em;
   margin: 0 auto;
 }
 
 .jumbotron {
   text-align: center;
+}
+
+ul.causes {
+  list-style: none;
+  li {
+  }
 }
