--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,12 @@
     </div>
   <% end %>
 
+  <% if flash[:alert] %>
+    <div class="alert alert-danger alert-dismissible center" role="alert">
+      <%= flash[:alert] %> <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span></button>
+    </div>
+  <% end %>
+
   <%= yield %>
 
   </div>
