edit and delete causes

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -11,8 +11,13 @@
   text-align: center;
 }
 
-ul.causes {
+ul.causes, ul.admin {
   list-style: none;
   li {
+    padding: .5em 0;
   }
+}
+
+.admin {
+  text-align: right;
 }
