create donations and add them to causes

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -11,13 +11,11 @@
   text-align: center;
 }
 
-ul.causes, ul.admin {
+ul.admin {
+  text-align: left;
   list-style: none;
   li {
-    padding: .5em 0;
+    float: left;
+    padding: 0 1em;
   }
-}
-
-.admin {
-  text-align: right;
 }
