--- a/app/views/causes/show.html.erb
+++ b/app/views/causes/show.html.erb
@@ -12,7 +12,7 @@
 
   <div class="col-md-4">
     <h2>Total Donated:</h2>
-    <p></p>
+    <p><%= number_to_currency @total %></p>
     <%= link_to "Donate!", new_cause_donation_path(@cause), class: "btn btn-primary btn-block" %>
   </div>
 </div>
@@ -30,7 +30,7 @@
     <% @cause.donations.each do |donation| %>
       <tr>
         <td><%= link_to "#{User.find(donation.user_id).email}", user_path(User.find(donation.user_id)) %></td>
-        <td>$ <%= donation.amount.to_i %></td>
+        <td><%= number_to_currency donation.amount %></td>
       </tr>
     <% end %>
     </tbody>
