--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -11,10 +11,14 @@
   text-align: center;
 }
 
-ul.admin {
-  padding: 0;
-  text-align: left;
+ul {
   list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+ul.admin {
+  text-align: left;
   li {
     float: left;
     padding: 0 1em 0 0;
